welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:60: error: '(' expected but identifier found.
while k != 12 
      ^